Thu Aug 24 2017
1. Bug fixing
   * Fixed bug where parameters could be incorrectly labelled in the random part if the order the variables are entered varies between levels or variables not included at lower levels are specified before those that are

Wed Jul 12 2017
1. Bug fixing
   * Fixed bug that caused residual estimates from MCMC to be doubled and requests for standardised residuals to be ignored
   * Fixed bug preventing multiple membership models with multivariate responses from being correctly set up

Mon Apr 24 2017
1. Changes
   * Add option for setting the random number generator used by MLwiN

Fri Nov 04 2016
1. Bug fixing
   * Allow runMLwiN function to work with "with" function

Sat Aug 27 2016
1. Bug fixing
   * Fix an RStudio issue when calling dev.new()
2. Changes
   * Complete the citation information for the JSS paper
   
Thu Aug 04 2016
1. Bug fixing
   * Fix error when attempting to drop unused factors from level ID that isn't of factor type by using droplevels on the data frame instead of individual variables

Mon Jul 25 2016
1. Bug fixing
   * Correctly use the new data passed into "newdata" parameter of predict function

Mon Jul 18 2016
1. Bug fixing
   * Correctly check whether the model is cross-classified when calculating the model hierarchy
   * Drop unused factors when calculating the complete-case group information

Tue May 24 2016
1. Bug fixing
   * Fix incorrect common coefficients with categorical variables

Mon May 23 2016
1. Bug fixing
   * Correct the parameter ordering to match that in the formula

2. Changes
   * Add initial support for model comparison tables via the memisc package
   * Model fit objects now contain contrast information for factor variables in the model

Wed Apr 27 2016
1. Changes
   * Avoid message from texreg when the R2MLwiN package is loaded
   * Update model comparisons in demos to use the texreg package

Tue Apr 26 2016
1. Changes