@@ -1,3 +1,7 @@
+Thu Sep 21 2017
+1. Bug fixing
+   * Fixed bug where some models with interactions would not run due to generated variables having different names to those expected by the formula
+
 Thu Aug 24 2017
 1. Bug fixing
    * Fixed bug where parameters could be incorrectly labelled in the random part if the order the variables are entered varies between levels or variables not included at lower levels are specified before those that are
